Fix CSS formatting by removing unnecessary whitespace in body style

--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ body{
      border: 5px solid black;
      margin:10px;
      padding: 15px;
-     
+     text-align: center;
+      
+
 
     }
